# mapdata

./: .gitignore  README.md  index.html
mapdata-python/mapdata-api/: .env  main.py  pyproject.toml
mapdata-python/mapdata-api/app/: main.py
mapdata-python/mapdata-api/app/adapters/inbound/rest/: data_controller.py  exception_handler.py  metadata_controller.py
mapdata-python/mapdata-api/app/application/dto/: data_request.py  data_response.py  metadata_request.py  metadata_response.py
mapdata-python/mapdata-api/app/application/mappers/: data_mapper.py  metadata_mapper.py
mapdata-python/mapdata-api/app/application/services/: data_service.py  metadata_service.py
mapdata-python/mapdata-api/app/config/: database.py  settings.py
mapdata-python/mapdata-api/app/domain/: exceptions.py
mapdata-python/mapdata-api/app/domain/entities/: data.py  metadata.py
mapdata-python/mapdata-api/app/domain/repositories/: data_repository.py  metadata_repository.py
mapdata-python/mapdata-api/app/infrastructure/: container.py
mapdata-python/mapdata-api/app/infrastructure/persistence/: base.py
mapdata-python/mapdata-api/app/infrastructure/persistence/mappers/: data_entity_mapper.py  metadata_entity_mapper.py
mapdata-python/mapdata-api/migrations/: env.py
mapdata-python/mapdata-api/src/: main.py
mapdata-python/mapdata-api/src/adapters/inbound/api/: data_controller.py
mapdata-python/mapdata-api/src/application/use_cases/: create_data.py
mapdata-python/mapdata-api/src/domain/entities/: data.py  metadata.py
mapdata-python/mapdata-api/src/domain/ports/: data_repository.py
(+236 files in other folders)
